--- a/package.json
+++ b/package.json
@@ -109,12 +109,17 @@
     }
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
+    "@geist-ui/icons": "^1.0.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^5.2.3",
+    "file-saver": "^2.0.5",
     "promisify-child-process": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fullscreen-loader": "^0.1.23",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
@@ -125,6 +130,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^28.1.7",
     "@types/node": "18.7.6",
     "@types/react": "^18.0.17",
