--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "electron-updater": "^5.2.3",
     "file-saver": "^2.0.5",
     "promisify-child-process": "^4.1.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fullscreen-loader": "^0.1.23",
