--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "electron-react-boilerplate",
-  "version": "4.6.0",
-  "description": "A foundation for scalable desktop apps",
+  "name": "soles",
+  "version": "0.1.0",
+  "description": "Local Testnet UI for Solana Development",
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://github.com/electron-react-boilerplate"
+    "name": "Orkun Mahir Kilic",
+    "email": "orkun@chainway.xyz",
+    "url": "https://chainway.xyz"
   },
   "main": "./dist/main/main.js",
   "scripts": {
